--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	-->
 	
 		<link href="index_files/0.DQAFkO3J.css" rel="stylesheet">
-		<link href="index_files/3.BvqVJBUO.css" rel="stylesheet"><!--[--><meta name="description" content="TESTTEST"><!--]--><!--[--><!--[!--><!--]--> <!----><script>(function setInitialMode({ defaultMode = "system", themeColors: themeColors2, darkClassNames: darkClassNames2 = ["dark"], lightClassNames: lightClassNames2 = [], defaultTheme = "", modeStorageKey: modeStorageKey2 = "mode-watcher-mode", themeStorageKey: themeStorageKey2 = "mode-watcher-theme" }) {
+		<link href="index_files/3.BvqVJBUO.css" rel="stylesheet"><meta property="og:title" content="332" /><meta property="og:image" content="/home/meow/Documents/codewarz/index/index_files/favicon.png" /><meta property="og:description" content="We're a truly global community where anything is possible. Bound by our founding principles of community, knowledge & friendship, we've been around for almost half a decade, and our impactful work is only beginning. Join us."><!--]--><!--[--><!--[!--><!--]--> <!----><script>(function setInitialMode({ defaultMode = "system", themeColors: themeColors2, darkClassNames: darkClassNames2 = ["dark"], lightClassNames: lightClassNames2 = [], defaultTheme = "", modeStorageKey: modeStorageKey2 = "mode-watcher-mode", themeStorageKey: themeStorageKey2 = "mode-watcher-theme" }) {
   const rootEl = document.documentElement;
   const mode = localStorage.getItem(modeStorageKey2) || defaultMode;
   const theme2 = localStorage.getItem(themeStorageKey2) || defaultTheme;
