--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en" class="dark" style="color-scheme: dark;" data-theme=""><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta charset="utf-8">
-	<link rel="icon" href="/home/meow/Documents/codewarz/index/index_files/favicon.png">
+	<link rel="icon" href="https://order332.com/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--
 		<script defer src="https://umami.orangegrp.xyz/script.js" data-website-id="2b786654-7399-47e0-b413-e426d4e540a8"></script>
 	-->
 	
 		<link href="index_files/0.DQAFkO3J.css" rel="stylesheet">
-		<link href="index_files/3.BvqVJBUO.css" rel="stylesheet"><meta name="title" content="332" /><meta name="image" content="favicon.png" /><meta name="description" content="We're a truly global community where anything is possible. Bound by our founding principles of community, knowledge & friendship, we've been around for almost half a decade, and our impactful work is only beginning. Join us."><!--]--><!--[--><!--[!--><!--]--> <!----><script>(function setInitialMode({ defaultMode = "system", themeColors: themeColors2, darkClassNames: darkClassNames2 = ["dark"], lightClassNames: lightClassNames2 = [], defaultTheme = "", modeStorageKey: modeStorageKey2 = "mode-watcher-mode", themeStorageKey: themeStorageKey2 = "mode-watcher-theme" }) {
+		<link href="index_files/3.BvqVJBUO.css" rel="stylesheet"><meta name="title" content="332" /><meta name="image" content="https://order332.com/favicon.png" /><meta name="description" content="We're a truly global community where anything is possible. Bound by our founding principles of community, knowledge & friendship, we've been around for almost half a decade, and our impactful work is only beginning. Join us."><!--]--><!--[--><!--[!--><!--]--> <!----><script>(function setInitialMode({ defaultMode = "system", themeColors: themeColors2, darkClassNames: darkClassNames2 = ["dark"], lightClassNames: lightClassNames2 = [], defaultTheme = "", modeStorageKey: modeStorageKey2 = "mode-watcher-mode", themeStorageKey: themeStorageKey2 = "mode-watcher-theme" }) {
   const rootEl = document.documentElement;
   const mode = localStorage.getItem(modeStorageKey2) || defaultMode;
   const theme2 = localStorage.getItem(themeStorageKey2) || defaultTheme;
